# stellar-project

./: .eslintrc.json  .gitignore  Cargo.toml  FRONTEND_README.md  HARDENING_NOTES.md  QUICK_START.md  README.md  index.html  package.json  tailwind.config.js
contract/: Cargo.toml  README.md
contract/src/: lib.rs  tests.rs
contract/test_snapshots/tests/: test_cannot_fund_already_funded_invoice.1.json  test_cannot_mark_overdue_before_maturity.1.json  test_create_invoice.1.json  test_credit_score_increases_on_repayment.1.json  test_happy_path_full_lifecycle.1.json  test_mark_overdue_after_maturity.1.json  test_wrong_buyer_cannot_repay.1.json
docs/: LOCALHOST.md  MOBILE_WALLET.md  TESTNET_USDC.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: AnimatedNumber.tsx  BuyerDashboard.tsx  BuyerUsdcSetup.tsx  CTABanner.tsx  ConnectWalletModal.tsx  CreateInvoiceForm.tsx  DashboardFaq.tsx  DashboardLayout.tsx  DashboardReveal.tsx  DashboardShell.tsx  (+22 more)
src/: App.tsx  config.ts  index.css  lib.rs  main.tsx  vite-env.d.ts
src/components/: BuyerDashboard.tsx  CreateInvoiceForm.tsx  DashboardLayout.tsx  DashboardTabs.tsx  FundInvoiceForm.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  InvestorDashboard.tsx  InvoiceTable.tsx  PreviewBanner.tsx  RepayInvoiceForm.tsx  SupplierDashboard.tsx
src/hooks/: useInvoices.ts  useWallet.ts
src/pages/: BuyerPage.tsx  HomePage.tsx  SupplierPage.tsx
src/types/: index.ts
src/utils/: format.ts  soroban.ts  stellar.ts
(+20 files in other folders)
